--- a/CODE/Magma/Magma.vcxproj.filters
+++ b/CODE/Magma/Magma.vcxproj.filters
@@ -13,25 +13,32 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Исходные файлы\Шифрование">
+      <UniqueIdentifier>{8b0a4921-dee1-4f01-a4f3-f003be162b77}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Исходные файлы\Расшифрование">
+      <UniqueIdentifier>{8c5ffa99-473a-465c-a6da-3221250f4dea}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CBC_DECRYPTION.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="ECB_DECRYPTION.cpp">
-      <Filter>Исходные файлы</Filter>
+    <ClCompile Include="OFB_ENCRYPTION.cpp">
+      <Filter>Исходные файлы\Шифрование</Filter>
     </ClCompile>
     <ClCompile Include="CBC_ENCRYPTION.cpp">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Исходные файлы\Шифрование</Filter>
     </ClCompile>
     <ClCompile Include="ECB_ENCRYPTION.cpp">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Исходные файлы\Шифрование</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="input.txt" />
-    <Text Include="key.txt" />
-    <Text Include="output.txt" />
+    <ClCompile Include="CBC_DECRYPTION.cpp">
+      <Filter>Исходные файлы\Расшифрование</Filter>
+    </ClCompile>
+    <ClCompile Include="ECB_DECRYPTION.cpp">
+      <Filter>Исходные файлы\Расшифрование</Filter>
+    </ClCompile>
+    <ClCompile Include="OFB_DECRYPTION.cpp">
+      <Filter>Исходные файлы\Расшифрование</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MagmaConst.h">
@@ -43,5 +50,19 @@
     <ClInclude Include="MagmaRounds.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="Examples\input.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
+    <Text Include="Examples\key.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
+    <Text Include="Examples\output.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
+    <Text Include="Examples\sinchrosign.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
   </ItemGroup>
 </Project>
